--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div class="card">
           <h2>Преподаватель</h2>
           <p><strong>Виталий Матвиенко</strong> — предприниматель и ментор. Помогу собрать портфолио и устроить ваш первый деплой.</p>
-          <div class="row" style="margin-top:10px">
+          <div class="row" style="img.vita">
             <a class="btn alt" href="https://t.me/vellkhem" target="_blank" rel="noopener">Написать в Telegram</a>
             <a class="btn alt" href="https://t.me/MatkosmosBot" target="_blank" rel="noopener">Открыть бота</a>
           </div>
